[package]
name = "datasource_bigquery"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
tracing = "0.1"
futures = "0.3.27"
async-trait = "0.1.66"
tokio = { version = "1", features = ["full"] }
async-stream = "0.3.4"
datafusion = "20.0"
serde_json = "1.0.94"
serde = { version = "1.0", features = ["derive"] }
gcp-bigquery-client = "0.16.6"
bigquery-storage = { git = "https://github.com/glaredb/bigquery-storage", branch = "master" }
parking_lot = "0.12.1"
async-channel = "1.8.0"
metastore = { path = "../metastore" }
datasource_common = { path = "../datasource_common" }
