[package]
name = "datasource_common"
version = { workspace = true }
edition = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
metastore = { path = "../metastore" }
repr = { path = "../repr" }
openssh = "0.9.9"
rand = "0.8.5"
async-trait = "0.1.67"
futures = "0.3.27"
ssh-key = { version = "0.5.1", features = ["ed25519", "alloc"] }
tempfile = "3.5.0"
thiserror = "1.0"
tokio = { version = "1.28.1", features = ["full"] }
tracing = "0.1"
datafusion = { workspace = true }
chrono = "0.4.24"
decimal = { path = "../decimal" }
