[package]
name = "datasource_debug"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
futures = "0.3.26"
async-trait = "0.1.64"
serde = { version = "1.0", features = ["derive"] }
datafusion = "17.0"
