[package]
name = "datasource_mongodb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
datasource_common = {path = "../datasource_common"}
thiserror = "1.0"
tracing = "0.1"
futures = "0.3.28"
async-trait = "0.1.68"
tokio = { version = "1", features = ["full"] }
async-stream = "0.3.5"
datafusion = "20.0"
serde = { version = "1.0", features = ["derive"] }
chrono = "*"
rust_decimal = "*"
mongodb = "2.4.0"
bitvec = "1"
