[package]
name = "datasource_mysql"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
datasource_common = {path = "../datasource_common"}
thiserror = "1.0"
tracing = "0.1"
futures = "0.3.26"
async-trait = "0.1.64"
tokio = { version = "1", features = ["full"] }
async-stream = "0.3.3"
datafusion = "18.0"
serde = { version = "1.0", features = ["derive"] }
mysql_async = "0.31.3"
mysql_common = { version = "*", features = ["chrono"] }
chrono = "*"
rust_decimal = "*"
openssh = "0.9.9"
