[package]
name = "datasource_object_store"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
tracing = "0.1"
futures = "0.3.28"
async-trait = "0.1.68"
datafusion = "21.1"
serde = { version = "1.0", features = ["derive"] }
object_store = { version = "0.5", features = ["gcp", "aws"] }
bytes = "1.4.0"
