[package]
name = "datasource_object_store"
version = {workspace = true}
edition = {workspace = true}

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
datasource_common = { path = "../datasource_common" }
thiserror = "1.0"
tracing = "0.1"
futures = "0.3.28"
async-trait = "0.1.68"
datafusion = {workspace = true}
parking_lot = "0.12.1"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
object_store = { version = "0.5", features = ["gcp", "aws"] }
bytes = "1.4.0"
url = "2.3.1"
