[package]
name = "datasource_postgres"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
datasource_common = {path = "../datasource_common"}
thiserror = "1.0"
tracing = "0.1"
async-trait = "0.1.63"
futures = "0.3.25"
tokio = { version = "1", features = ["full"] }
datafusion = "16.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.91"
tokio-postgres = { version = "0.7.7", features = ["with-uuid-1", "with-serde_json-1"] }
uuid = "1.2.2"
