[package]
name = "datasource_postgres"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
datasource_common = {path = "../datasource_common"}
thiserror = "1.0"
tracing = "0.1"
futures = "0.3.27"
async-trait = "0.1.66"
tokio = { version = "1", features = ["full"] }
datafusion = "19.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.94"
tokio-postgres = { version = "0.7.7", features = ["with-uuid-1", "with-serde_json-1", "with-chrono-0_4"] }
uuid = "1.3.0"
chrono = "0.4.23"
